--- a/style.css
+++ b/style.css
@@ -70,3 +70,15 @@ hr{
     padding:30px 10px;
     
 }
+@media(max-width:500px){
+    .grid_projects{
+        display:grid;
+        
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        gap:0px;
+        
+    
+    }
+
+}
