--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ hr{
 .grid_projects{
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     gap:0px;
     
 
@@ -75,7 +75,7 @@ hr{
         display:grid;
         
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
         gap:0px;
         
     
